Re-testing #151851 (rename file to name of existing symlink) I found that it worked (I do get the overwrite dialog), but after overwriting the icon wouldn't be updated correctly. KDirLister was emitting the renaming before the deletion, which would make kdirmodel lose the new data.

And when writing the unittest for this I discovered another bug: KDirLister didn't process correctly
the KDirWatch signal emitted when an old file is re-created again.
BUG: 151851

svn path=/trunk/KDE/kdelibs/; revision=925561